<resources>
    <string name="app_name">Game System 720</string>
    <string name="power_options_button">Power Options</string>
    <string name="game_system_title">Game System 720</string>
    <string name="login_register_button">No account? Create one here!</string>

    <string name="sign_in_button">Sign In</string>
    <string name="current_user_login_screen_txt">Current User Login</string>
    <string name="add_txt_hint">Username</string>
    <string name="password_txt_hint">Password</string>
    <string name="user_login_button">Login</string>

    <string name="create_user_account">Create Account</string>
    <string name="back_button">Back</string>
    <string name="create_account_txt">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="new_username">Username</string>
    <string name="add_email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_button">Create</string>

    <string name="welcome_user_txt">Welcome</string>
    <string name="user_txt_hint">Username</string>
    <string name="profile_settings_button">View Profile</string>
    <string name="profile_page">Profile</string>
    <string name="settings_button">Settings</string>
    <string name="power_off_button">Power Off</string>
    <string name="restart_button">Restart</string>
    <string name="switch_user_button">Switch User</string>
    <string name="logout_button">Sign Out</string>

    <string name="notifications_button">Notifications</string>
    <string name="empty_list">Nothing here&#8230;\nCheck back soon!</string>
    <string name="game_button">Game</string>
    <string name="store_button">GS Store</string>

    <string name="friends_and_messages_button">Friends and Messages</string>
    <string name="friends_empty">No friends found&#8230;\n Add friends to appear here!</string>
    <string name="friends_button">Friends</string>
    <string name="messages_button">Messages</string>
    <string name="compose_new_message">Compose</string>
    <string name="messages_empty">Inbox Empty</string>
    <string name="compose_message_screen">Compose Message</string>
    <string name="send_button">Send</string>

    <string name="videos_and_movies_button">GS Video</string>
    <string name="videos_button">Videos</string>
    <string name="movies_button">Movies</string>
    <string name="tv_shows_button">TV Shows</string>


    <string name="store_title_txt">Store</string>
    <string name="search_games_button">Search Games</string>
    <string name="search_movies_button">Search Movies</string>
    <string name="search_tv_shows_button">Search TV Shows</string>
    <string name="search_applications_button">Search Applications</string>
    <string name="store_games">Store: Games</string>
    <string name="store_movies">Store: Movies</string>
    <string name="store_tv_shows">Store: TV Shows</string>
    <string name="store_applications">Store: Applications</string>


    <string name="placeholder">Placeholder</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
