<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jfarina.gamesystem720.store.activities.StoreActivityController">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_avatar" />

    <Button
        android:id="@+id/search_games_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="100dp"
        android:text="@string/search_games_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_movies_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="35dp"
        android:text="@string/search_movies_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_games_button" />

    <Button
        android:id="@+id/search_tv_shows_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="35dp"
        android:text="@string/search_tv_shows_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_movies_button" />

    <Button
        android:id="@+id/search_applications_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="35dp"
        android:text="@string/search_applications_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_tv_shows_button" />
</android.support.constraint.ConstraintLayout>
