<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="#b71c1c">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b71c1c"
        tools:context=".login.activity.controllers.LoginActivityController">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="210dp"
            android:layout_height="160dp"
            android:layout_marginEnd="87dp"
            android:layout_marginStart="87dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/username_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/user_txt_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/password_txt_hint"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_txt" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginEnd="148dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="32dp"
            android:background="#FFFFFF"
            android:onClick="touchLogin"
            android:text="@string/user_login_button"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_txt" />

        <Button
            android:id="@+id/loginRegisterButton"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginEnd="148dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="45dp"
            android:background="@null"
            android:text="@string/login_register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>