<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".friends.messages.activities.MessagesActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.jfarina.gamesystem720.friends.messages.activities.FriendsActivityController">

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="368dp"
            android:layout_height="36dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toTopOf="@+id/messages_listview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/friends_button"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="112dp"
            android:text="@string/friends_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/search_bar"
            app:layout_constraintEnd_toStartOf="@+id/messages_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/messages_button"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="112dp"
            android:text="@string/messages_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/search_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/friends_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/messages_listview"
            android:layout_width="match_parent"
            android:layout_height="333dp"
            android:layout_marginTop="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/messages_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/messages_empty"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="21sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/messages_listview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/messages_listview" />

        <Button
            android:id="@+id/compose"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="6dp"
            android:text="@string/compose_new_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toTopOf="@+id/search_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friends_button" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>